# projeto_teste_kedro

iris-kedro-project/: README.md  pyproject.toml
iris-kedro-project/conf/base/: catalog.yml  parameters.yml
iris-kedro-project/src/iris_kedro_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
iris-kedro-project/src/iris_kedro_project/pipelines/data_science/: nodes.py  pipeline.py
